fix paragraph spacing

--- a/app/assets/stylesheets/quote.scss
+++ b/app/assets/stylesheets/quote.scss
@@ -1,4 +1,4 @@
-.blockquote-wrap {
+.blockquote-container {
   padding-top: 10px;
   padding-bottom: 10px;
   
@@ -13,8 +13,8 @@
     }
     
     p {
-      padding-left: 10px;
-      padding-top: 10px;
+      padding: 0 0 0 10px;
+      margin-top: 10px;
       position: relative;
       z-index: 9999;
       border: none;
